<resources>

    <!-- General -->
    <string name="app_name">Ping</string>
    <string name="ping">Ping</string>
    <string name="pong">Pong</string>
    <string name="ping_uppercase">PING</string>
    <string name="pong_uppercase">PONG</string>

    <string name="test_message">This is a test message!</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="reject">Reject</string>
    <string name="reject_uppercase">REJECT</string>

    <string name="error_excuse">We are sorry but something went wrong.</string>

    <!-- Warning messages -->
    <string name="warning_default">Are you sure?</string>
    <string name="warning_leave_application">Do you want to leave the application?</string>
    <string name="warning_logout">Do you really want to logout?</string>
    <string name="warning_reject_invitation">Do you really want to reject invitation for \'%1$s\' group?</string>

    <!-- Invites -->
    <string name="loading_invites">Loading invites…</string>
    <string name="invite_member_info">Invite new member</string>
    <string name="invite_member_email">Enter new member\'s email:</string>
    <string name="invite_member_invite_sent_successfully">Invite sent successfully!</string>
    <string name="invite_member_user_not_found">User with provided email does not exist</string>
    <string name="invite_member_user_already_invited">User with provided email is already invited in group</string>
    <string name="invite_group_name">Group: %1$s</string>
    <string name="invite_sender_name">Sender: %1$s</string>
    <string name="invitation_accepted">Invitation accepted. You are now a member of a group %1$s</string>
    <string name="invitation_rejected">Invitation rejected.</string>

    <!-- Groups -->
    <string name="loading_groups">Loading groups…</string>
    <string name="no_need_to_refresh">There is no need to refresh…</string>
    <string name="select_group_for_ping">Selected group: </string>

    <!-- Navigation drawer menu names -->
    <string name="nav_group_general">General</string>
    <string name="nav_group_personal">Personal</string>
    <string name="nav_group_other">Other</string>
    <string name="nav_home">Ping</string>
    <string name="nav_groups">Groups</string>
    <string name="nav_invites">Invites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Log out</string>

    <!-- Authentication -->
    <string name="authentication_failed">Hmm are you sure username and password are correct?</string>

    <!-- Messaging service -->
    <string name="ping_channel">ping-channel</string>
    <string name="ping_channel_desc">Ping Channel for Push Notifications</string>
    <string name="subscribe_ping_topic">PING.%1$s</string>
    <string name="subscribe_pong_topic">PING.REPLY.%1$s</string>


</resources>
