<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_settings_input_antenna_black_48dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_baseline_group_48"
            android:title="@string/nav_groups" />
        <item
            android:id="@+id/nav_invites"
            android:icon="@drawable/ic_round_mail_outline_48"
            android:title="@string/nav_invites" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_48"
            android:title="@string/nav_logout"
            />
    </group>

</menu>